# Pasti_a_Domicilio

./: .gitignore  pyproject.toml
examples/: example_table.xlsx  menù.xlsx
pasti_a_domicilio/: configura.py
tests/: test_configura.ipynb
