[tool.poetry]
name = "pasti-a-domicilio"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
openpyxl = "^3.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
